--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -18,4 +18,7 @@ body {
 .underlined {
   text-decoration: underline; }
 
+.input {
+  letter-spacing: 2px; }
+
 /*# sourceMappingURL=styles.css.map */
