--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: Apercu-Light;
   src: url("../fonts/Apercu-Light.otf"); }
+@font-face {
+  font-family: EyechartBold;
+  src: url("../fonts/EyechartBold-Bold.otf"); }
 body {
   font-family: Apercu-Light !important; }
 
@@ -26,5 +29,8 @@ input {
   font-size: 13px;
   letter-spacing: 2px;
   min-width: 220px; }
+
+#bottom-row {
+  font-family: EyechartBold; }
 
 /*# sourceMappingURL=styles.css.map */
