--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -31,6 +31,7 @@ input {
   min-width: 220px; }
 
 #bottom-row {
-  font-family: EyechartBold; }
+  font-family: EyechartBold;
+  letter-spacing: 2px; }
 
 /*# sourceMappingURL=styles.css.map */
